--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
 
         :root {
-            --primary-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            --primary-gradient: linear-gradient(135deg, #000000 0%, #999393 100%);
             --danger-gradient: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%);
             --success-gradient: linear-gradient(135deg, #2ecc71 0%, #27ae60 100%);
             --glass-bg: rgba(255, 255, 255, 0.1);
