--- a/login.html
+++ b/login.html
@@ -54,15 +54,7 @@
               required
             />
           </div>
-          <div class="form-group">
-            <label for="email">Email Address</label>
-            <input
-              type="email"
-              id="email"
-              placeholder="Enter your email"
-              required
-            />
-          </div>
+        
           <div class="form-group">
             <label for="phone">Phone Number</label>
             <input
@@ -94,6 +86,15 @@
               type="text"
               id="emergencyContact"
               placeholder="Name and number"
+            />
+          </div>
+          <div class="form-group">
+            <label for="email">emergency contact Address</label>
+            <input
+              type="email"
+              id="email"
+              placeholder="Enter emergency email"
+              required
             />
           </div>
           <div class="form-group">
