--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
     <title>ReliefNet - Disaster Help & Volunteer Map</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <main class="home-container">
         <section class="hero">
-            <h1>ReliefNet — Disaster Help & Volunteer Map</h1>
-            <p class="hero-description">
+            <h1>ReliefNet</h1>
+            <h2>Helping victims get help from fellow citizens</h2>
+            <p class="hero-desc">
                 Connect victims with volunteers in real-time. Submit emergencies as red pins on OpenStreetMap and navigate to respond safely.
             </p>
             <div class="hero-buttons">
                 <button class="btn btn-primary" onclick="window.location.href='map.html?role=victim'">I need help</button>
                 <button class="btn btn-secondary" onclick="window.location.href='map.html?role=volunteer'">I want to help</button>
-            </div>
-            <div class="info-card">
-                <p>Privacy-first demo. No signup yet; we'll add secure auth and a shared backend next.</p>
             </div>
         </section>
     </main>
